<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMainActivityLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etUserID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUserID"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"/>

    <EditText
        android:id="@+id/etSystolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSystolicReading"
        android:importantForAutofill="no"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"/>
    <EditText
        android:id="@+id/etDiastolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDiastolicReading"
        android:inputType="number"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"/>
    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tvCondition"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"
        android:padding="@dimen/padding_4"/>
    <Button
        android:id="@+id/btnDiastolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddBloodPressure"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8" />
    <Button
        android:id="@+id/btnListBPView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnListBPView"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"/>

    <Button
        android:id="@+id/btnViewReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnViewReport"
        android:layout_marginRight="8sp"
        android:layout_marginLeft="8sp"/>

</LinearLayout>