<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/etUserID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUserID"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"/>

    <EditText
        android:id="@+id/etSystolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSystolicReading"
        android:importantForAutofill="no"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"/>
    <EditText
        android:id="@+id/etDiastolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDiastolicReading"
        android:inputType="number"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"/>
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate" />
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />
</LinearLayout>