<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:layout_marginRight="@dimen/margin_4"
    android:layout_marginLeft="@dimen/margin_4"
    android:orientation="vertical">
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/textUserID"/>
        <TextView
            android:id="@+id/etUserID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/sys_average"/>
        <TextView
            android:id="@+id/tvSysAverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/dias_average"/>
        <TextView
            android:id="@+id/tvDiasAverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/condition_average"/>
        <TextView
            android:id="@+id/tvAverageCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"/>
    </TableRow>
</TableLayout>